feat: define operPanel store &  add comp [OperPanel]

--- a/src/css/app.css
+++ b/src/css/app.css
@@ -2,3 +2,7 @@
 * {
   font-family: 'Microsoft JhengHei';
 }
+
+.q-field--standout.q-field--readonly .q-field__control::before {
+  border: none;
+}
