--- a/src/css/app.css
+++ b/src/css/app.css
@@ -62,6 +62,46 @@
   font-weight: bold;
 }
 
+.compMinWidth {
+  min-width: 600px !important;
+}
+
+.customTabs .q-tab__label {
+  font-size: 20px;
+  font-weight: bold;
+}
+
 .apexcharts-xaxis {
   cursor: pointer;
+}
+
+.infoTableField td:first-child {
+  background-color: lightskyblue;
+}
+
+.purchaseTableField .q-table__top {
+  background-color: lightskyblue;
+}
+
+.purchaseTableField thead tr th {
+  position: sticky;
+  z-index: 1;
+  font-size: 18px;
+  font-weight: bold;
+  background-color: lightcyan;
+}
+
+.purchaseTableField thead tr:first-child th {
+  top: 0;
+}
+
+.operDialog {
+  width: 100%;
+}
+
+.banUnbanList {
+  width: 100%;
+  max-height: 30vh;
+  overflow-y: auto;
+  font-weight: bold;
 }
