--- a/src/css/app.css
+++ b/src/css/app.css
@@ -105,3 +105,7 @@
   overflow-y: auto;
   font-weight: bold;
 }
+
+.itemExpanded.q-expansion-item--expanded {
+  background-color: rgb(147, 178, 245);
+}
